# SlideGuard

./: .gitignore  PRD.md  README.md  build.mjs  build.py  package-lock.json  package.json  pyproject.toml  requirement-list.md  requirements.txt  run.sh  test.pptx
.claude/: CLAUDE.md
backend/: __init__.py  app.py  config.py
backend/engine/: cluster.py  fixer.py  scanner.py  scorer.py
backend/models/: issue.py
backend/parsers/: __init__.py  pptx_parser.py
backend/reporters/: excel_reporter.py  html_reporter.py
backend/rules/: base_checker.py  consistency.py  density.py  font_checker.py  image_checker.py  layout_checker.py  page_checker.py
backend/utils/: color.py  geometry.py
design/ui/source/: README.md  detail-v2.css  empty-states.css  mockups.css  mockups.html  mockups.js  responsive.css
design/ui/source/pages/: 01-home-file-import.html  01a-file-loaded.html  02-scan-settings.html  03-sensitive-words.html  04-scanning.html  (+25 more)
frontend/static/css/: app.css
frontend/static/js/: api.js  app.js
frontend/templates/: index.html
src/: app.js  index.html  router.js  store.js
src/components/: sidebar.js
src/core/: fixEngine.js  pptxParser.js  ruleEngine.js
src/core/rules/: r002.js  r003.js  r004.js  r005.js  r006.js  r007.js  r008.js  r009.js  r010.js
src/pages/: fixConfirm.js  fixResult.js  home.js  issueDetail.js  issueList.js  scanResult.js  scanSettings.js  scanning.js  sensitiveWords.js
src/styles/: empty-state.css  main.css
src/utils/: download.js  preview.js
tests/: test_color.py  test_fixer.py  test_geometry.py  test_parser.py
