[project]
name = "slideguard"
version = "1.0.0"
description = "离线PPT智能质检与规范化工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "python-pptx>=1.0.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "openpyxl>=3.1",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
